<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">O计</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_home_page_tab">首页</string>
    <string name="app_o_count_tab">O计</string>
    <string name="app_shopping_mall_tab">商城</string>
    <string name="app_user_tab">用户</string>
    <string name="app_me_tab">我的</string>
    <string name="app_paysystem_tab">汇缴</string>

    <string name="collapse">收起</string>
    <string name="expand">展开</string>
    <string name="retract">收起</string>
    <string name="spread">展开</string>

    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">立即更新</string>
    <string name="soft_update_later">下次再说</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <!--充值状态文字-->
    <string name="charg_success">已完成</string>
    <string name="charg_wait">待扣款</string>
    <string name="charg_fail">异常</string>
    <string name="charg_recharge">待缴费</string>
    <string name="charg_recharge_success">补缴成功</string>

    <!--动态权限-->
    <string name="permission_cancel">取消</string>
    <string name="permission_setting">设置</string>
    <string name="permission_title_permission_failed">许可申请失败！</string>
    <string name="permission_message_permission_failed">我们需要一些权限是您拒绝或系统错误，请您转到设置页手动授权，否则功能无法使用！</string>
    <string name="permission_resume">继续</string>
    <string name="permission_title_permission_rationale">权限被拒绝！</string>
    <string name="permission_message_permission_rationale">您拒绝了我们的授权，请您授权，否则功能无法使用！</string>

    <!--网络错误提示-->
    <string name="netError">网络异常，请检查网络连接！</string>
    <!--角色区分-->
    <string name="trainstation">0</string> <!--火车站角色-->
    <string name="outlets">1</string>  <!--代售点角色-->
    <string name="admin">2</string><!--管理员角色-->
    <string name="accounting_and_cashier">3</string><!--会计和出纳-->
    <string name="railway_administration">4</string><!--铁路总局、分局、车务段-->
    <!--关于界面版本号   1.2.3-->
    <string name="verson">1.13.8</string>
</resources>